# agenticverz_2.0

./: .aurora_needs_preflight_recompile  .db_authority_drift_history.json  .env.bak.20251205062039  .env.example  .gitattributes  .gitignore  .m4_signoff  .m5_signoff  .postflight-baseline.json  .pre-commit-config.yaml  .secrets.baseline  .session_state.yaml  .validator.pid  .validator_status.json  =4.0.0  CLAUDE.md  CLAUDE_AUTHORITY.md  CLAUDE_BEHAVIOR_LIBRARY.md  CLAUDE_BOOT_CONTRACT.md  CLAUDE_PRE_CODE_DISCIPLINE.md  GPT.md  INTENT_DECLARATION.yaml  Makefile  PROJECT_NOTES.md  README.md  SESSION_BOOTSTRAP_REQUIRED.md  codex_agents_agenticverz2.md  docker-compose.staging.yml  docker-compose.yml  mypy.ini  project_aware_agenticverz2.md  pyproject.toml  test_api.sh  vision_mission_self_audit.md
backend/: .hoc_cross_domain_baseline.json  .openapi_snapshot.json  AUDIENCE_REGISTRY.yaml  Dockerfile  Dockerfile.test  Makefile  PYTHON_EXECUTION_CONTRACT.md  alembic.ini  docker-compose.test.yml  pyproject.toml  requirements.txt  vulture_whitelist.py
backend/.claude/plans/: hoc-cus-hygiene-fix.md
backend/AURORA_L2_CAPABILITY_REGISTRY/: AURORA_L2_CAPABILITY_ACKNOWLEDGE.yaml  AURORA_L2_CAPABILITY_ACTIVATE.yaml  AURORA_L2_CAPABILITY_ADD_NOTE.yaml  AURORA_L2_CAPABILITY_APPROVE.yaml  AURORA_L2_CAPABILITY_DEACTIVATE.yaml  AURORA_L2_CAPABILITY_REJECT.yaml  AURORA_L2_CAPABILITY_RESOLVE.yaml  AURORA_L2_CAPABILITY_SUMMARY_ACTIVITY.yaml  AURORA_L2_CAPABILITY_UPDATE_LIMIT.yaml  AURORA_L2_CAPABILITY_UPDATE_RULE.yaml  AURORA_L2_CAPABILITY_UPDATE_THRESHOLD.yaml  AURORA_L2_CAPABILITY_activity.completed_runs.yaml  AURORA_L2_CAPABILITY_activity.completed_v2.yaml  AURORA_L2_CAPABILITY_activity.cost_analysis.yaml  AURORA_L2_CAPABILITY_activity.customer_activity.yaml  AURORA_L2_CAPABILITY_activity.discovery_list.yaml  AURORA_L2_CAPABILITY_activity.discovery_stats.yaml  AURORA_L2_CAPABILITY_activity.feedback_list.yaml  AURORA_L2_CAPABILITY_activity.health_status.yaml  AURORA_L2_CAPABILITY_activity.jobs_list.yaml  AURORA_L2_CAPABILITY_activity.live_agents.yaml  AURORA_L2_CAPABILITY_activity.live_runs.yaml  AURORA_L2_CAPABILITY_activity.live_v2.yaml  AURORA_L2_CAPABILITY_activity.metrics_v2.yaml  AURORA_L2_CAPABILITY_activity.patterns.yaml  AURORA_L2_CAPABILITY_activity.predictions_list.yaml  AURORA_L2_CAPABILITY_activity.predictions_summary.yaml  AURORA_L2_CAPABILITY_activity.queued_runs.yaml  AURORA_L2_CAPABILITY_activity.risk_signals.yaml  AURORA_L2_CAPABILITY_activity.run_detail.yaml  AURORA_L2_CAPABILITY_activity.runs.yaml  AURORA_L2_CAPABILITY_activity.runs_by_dimension.yaml  AURORA_L2_CAPABILITY_activity.runs_list.yaml  AURORA_L2_CAPABILITY_activity.runtime_traces.yaml  AURORA_L2_CAPABILITY_activity.signals.yaml  AURORA_L2_CAPABILITY_activity.signals_v2.yaml  AURORA_L2_CAPABILITY_activity.summary.yaml  AURORA_L2_CAPABILITY_activity.summary_by_status.yaml  AURORA_L2_CAPABILITY_activity.tenant_runs.yaml  AURORA_L2_CAPABILITY_activity.threshold_signals_v2.yaml  (+138 more)
backend/AURORA_L2_CAPABILITY_REGISTRY/LEGACY_DEPRECATED/: AURORA_L2_CAPABILITY_ACKNOWLEDGE.yaml  AURORA_L2_CAPABILITY_ACTIVATE.yaml  AURORA_L2_CAPABILITY_ADD_NOTE.yaml  AURORA_L2_CAPABILITY_APPROVE.yaml  AURORA_L2_CAPABILITY_DEACTIVATE.yaml  AURORA_L2_CAPABILITY_REJECT.yaml  AURORA_L2_CAPABILITY_RESOLVE.yaml  AURORA_L2_CAPABILITY_SUMMARY_ACTIVITY.yaml  AURORA_L2_CAPABILITY_UPDATE_LIMIT.yaml  AURORA_L2_CAPABILITY_UPDATE_RULE.yaml  AURORA_L2_CAPABILITY_UPDATE_THRESHOLD.yaml  AURORA_L2_CAPABILITY_overview.cost_anomalies.yaml  AURORA_L2_CAPABILITY_overview.cost_by_feature.yaml  AURORA_L2_CAPABILITY_overview.cost_by_model.yaml  AURORA_L2_CAPABILITY_overview.feedback_summary.yaml  AURORA_L2_CAPABILITY_summary.activity.yaml  (+2 more)
backend/alembic/: env.py
backend/app/: __init__.py  auth.py  cli.py  db.py  db_async.py  db_helpers.py  hoc_main.py  logging_config.py  main.py  metrics.py  skill_http.py
backend/aurora_l2/: SDSR_UI_AURORA_compiler.py  __init__.py  compiler.py
backend/cli/: aos.py  aos_workflow.py  cus_health_check.py
backend/contracts/: activity_summary.schema.json  incidents_summary.schema.json
backend/examples/: m12_parallel_scrape.py
backend/scripts/: _db_guard.py  backfill_memory_embeddings.py  backfill_provenance.py  benchmark_registry.py  check_no_datetime_now.sh  check_pydantic_config.sh  ci_check_audit_immutability.py  ci_check_audit_no_commit.sh  cus_usage_aggregator.py  deploy_migrations.sh  golden_archival.py  load_test_approvals.py  mypy_zones.py  run_escalation.py  seed_admin.py  seed_sandbox_data.py  test_event_reactor.py  test_http_three_modes.sh  test_policy_checker.py  test_three_mode_authority.py
backend/static/: openapi.json
backend/tests/: README.md  TESTING.md  __init__.py  conftest.py  registry_snapshot.json  test_activity_facade_introspection.py  test_business_builder_worker.py  test_category2_auth_boundary.py  test_category3_data_contracts.py  test_category4_cost_intelligence.py  test_category5_absence.py  test_category5_incident_contrast.py  test_category6_founder_actions.py  test_category7_legacy_routes.py  test_cost_simulator.py  test_cus_vault_sdk_contract.py  test_determinism_invariant.py  test_failure_catalog.py  test_failure_catalog_m9.py  test_integration.py  test_m10_leader_election.py  test_m10_metrics.py  test_m10_outbox_e2e.py  test_m10_production_hardening.py  test_m10_recovery_chaos.py  test_m10_recovery_enhanced.py  test_m12_agents.py  test_m12_chaos.py  test_m12_integration.py  test_m12_load.py  test_m13_iterations_cost.py  test_m13_prompt_cache.py  test_m17_care.py  test_m18_advanced.py  test_m18_care_l.py  test_m19_policy.py  test_m20_ir.py  test_m20_optimizer.py  test_m20_parser.py  test_m20_runtime.py  (+25 more)
budgetllm/: LICENSE  README.md  __init__.py  pyproject.toml
budgetllm/budgetllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
budgetllm/core/: __init__.py  budget.py  cache.py  client.py  output_analysis.py  prompt_classifier.py  risk_formula.py  safety.py
budgetllm/tests/: __init__.py  test_budgetllm.py  test_openai_compat.py  test_safety_governance.py
docs/: DEMOS.md  (+47 more)
(+8099 files in other folders)
