[project]
name = "aos-backend"
version = "0.1.0"
description = "AOS - Agentic Operating System Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "ASYNC",  # async-related rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable names (intentional in some contexts)
    "E712",   # comparison to True/False (intentional in SQLAlchemy/SQLModel queries)
    "E731",   # lambda assignment (intentional in specific modules)
]

[tool.ruff.lint.per-file-ignores]
# =============================================================================
# QUARANTINE STRATEGY (Bucket B — Structural Debt)
# These are NOT suppressed — they are ACKNOWLEDGED as structural patterns.
# Reference: docs/HOUSEKEEPING_CLASSIFICATION.md
# Reference: docs/governance/LINTING_TECHNICAL_DEBT.md
# =============================================================================

# Alembic migrations require imports after revision declarations
"alembic/versions/*.py" = ["E402", "F401", "I001", "F541"]
"alembic/env.py" = ["I001", "F401", "F541"]

# Star imports in contracts __init__.py are intentional (re-exports)
"app/contracts/__init__.py" = ["F405", "F401"]

# Main app has deferred router imports (FastAPI pattern)
"app/main.py" = ["E402", "I001"]

# API modules with conditional/dynamic imports
"app/api/policy.py" = ["F401"]
"app/api/guard.py" = ["I001", "E402"]
"app/api/integration.py" = ["E402"]
"app/api/traces.py" = ["E402"]
"app/api/costsim.py" = ["E402", "F401", "F841"]

# Config modules with conditional loading
"app/config/flag_sync.py" = ["E402"]

# Workflow engine with deferred imports
"app/workflow/engine.py" = ["E402"]
"app/workflow/policies.py" = ["E402"]
"app/workflow/golden.py" = ["E402"]

# Worker modules with deferred imports
"app/workers/business_builder/worker.py" = ["E402"]
"app/hoc/int/worker/runtime/integrated_runtime.py" = ["E402"]
"app/hoc/int/worker/recovery_evaluator.py" = ["E402"]

# Skills modules with conditional imports
"app/skills/*.py" = ["I001", "E402", "F401", "F841", "ASYNC101"]
"app/skills/stubs/*.py" = ["E402", "F401", "F841"]

# Integrations with conditional imports
"app/integrations/__init__.py" = ["E402"]
"app/integrations/dispatcher.py" = ["E402"]

# Memory service with Phase 4B imports
"app/memory/memory_service.py" = ["E402"]

# Planner with circular dependency avoidance
"app/planner/stub_planner.py" = ["E402"]

# Policy engine with Phase 4B imports
"app/policy/engine.py" = ["E402"]

# Schemas with deferred typing imports
"app/schemas/*.py" = ["E402", "I001", "F401"]
"app/schemas/**/*.py" = ["E402", "I001", "F401"]

# Utils with optional dependencies
"app/utils/budget_tracker.py" = ["E402"]

# CLI has deferred imports
"app/cli.py" = ["E402", "I001", "F401"]
"cli/aos.py" = ["E402", "I001", "F401"]

# Tests - comprehensive ignores for test patterns
"tests/*.py" = ["E402", "F601", "I001", "F401", "F841", "F541", "E721", "F811", "ASYNC101"]
"tests/**/*.py" = ["E402", "F601", "I001", "F401", "F841", "F541", "E721", "F811", "ASYNC101"]

# Scripts with deferred imports
"scripts/**/*.py" = ["E402", "I001", "F401", "F841", "F541"]

# =============================================================================
# DEFERRED TECHNICAL DEBT (2026-01-17)
# Pre-existing violations acknowledged as deferred cleanup work.
# These do NOT indicate governance violations - only code quality debt.
# Reference: docs/governance/LINTING_TECHNICAL_DEBT.md
#
# Strategy: Broad patterns to freeze existing debt. New violations in NEW
# files will still be caught. Cleanup is a separate workstream.
# =============================================================================

# API modules - widespread import sorting and conditional imports
"app/api/*.py" = ["I001", "E402", "F401", "F541", "F841", "E711", "ASYNC101"]
"app/api/**/*.py" = ["I001", "E402", "F401", "F541", "F841", "ASYNC101"]

# Auth modules - conditional imports and deferred loading
"app/auth/*.py" = ["I001", "E402", "F401", "F841"]

# Billing modules
"app/billing/*.py" = ["I001", "F401"]

# Agent modules - unused variables from conditional paths
"app/agents/**/*.py" = ["I001", "E402", "F401", "F841"]

# Core modules
"app/core/*.py" = ["I001", "E402"]

# Costsim modules - deferred imports for circuit breaker patterns + async file I/O
"app/costsim/*.py" = ["I001", "E402", "F401", "F841", "ASYNC101"]

# Domain modules
"app/domain/**/*.py" = ["I001", "E402", "F401"]

# DSL interpreter - includes E721 for intentional type() comparisons
"app/dsl/*.py" = ["I001", "E402", "E721"]

# Evidence modules
"app/evidence/*.py" = ["I001", "E402", "F401"]

# Governance kernel
"app/governance/*.py" = ["I001", "E402", "F841"]

# Job modules
"app/jobs/*.py" = ["I001", "E402", "F401", "F841"]

# Models
"app/models/*.py" = ["I001", "F401"]

# Observability
"app/observability/*.py" = ["I001", "E402", "F401"]

# Optimization
"app/optimization/*.py" = ["I001", "E402"]

# Policy modules
"app/policy/**/*.py" = ["I001", "E402", "F401", "F841"]

# Protection modules
"app/protection/*.py" = ["I001", "E402", "F401", "F841"]

# Routing modules
"app/routing/*.py" = ["I001", "E402", "F401", "F841"]

# Runtime modules
"app/runtime/**/*.py" = ["I001", "E402", "F401"]

# Services modules - F821 for forward type references
"app/services/**/*.py" = ["I001", "E402", "F401", "F841", "F821"]

# Traces module
"app/traces/*.py" = ["I001", "E402"]

# CLI with deferred imports
"app/hoc/cus/integrations/cus_cli.py" = ["E402"]
"app/hoc/int/integrations/int_cli.py" = ["E402"]

# DB module
"app/db.py" = ["E402", "F401"]

# Integrations
"app/integrations/*.py" = ["I001", "E402", "F401"]

# Memory modules - includes E721 for intentional type comparisons
"app/memory/*.py" = ["I001", "E402", "F401", "F841", "E721"]

# Skill HTTP module -  for timeout parameter design
"app/skill_http.py" = ["E402", "I001", "F401"]

# Stores - F811 for import redefinition patterns
"app/stores/*.py" = ["I001", "E402", "F401", "F841", "F811"]

# Tasks -  for timeout parameter design
"app/tasks/*.py" = ["I001", "E402", "F401", "F841"]

# Utils
"app/utils/*.py" = ["I001", "E402", "F401", "F841"]

# Worker modules - E711 for SQLAlchemy None comparison, F821 for forward references
"app/hoc/int/worker/*.py" = ["I001", "E402", "F401", "F841", "E711", "F821"]
"app/workers/**/*.py" = ["I001", "E402", "F401", "F841"]

# Workflow modules - E721 for intentional type checks,  for file I/O
"app/workflow/*.py" = ["I001", "E402", "F401", "F841", "E721", "ASYNC101"]

# Aurora L2 tools
"aurora_l2/*.py" = ["I001", "E402", "F401", "F841", "F541"]
"aurora_l2/**/*.py" = ["I001", "E402", "F401", "F841", "F541"]

# Example scripts
"examples/*.py" = ["E402", "F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# MYPY TYPE SAFETY ZONES (PIN-121)
# =============================================================================
# Zone A: Critical    - Strict checking, pre-commit blocks
# Zone B: Standard    - Moderate checking, CI warns
# Zone C: Flexible    - Baseline only, known debt tolerated
# =============================================================================

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true        # GUARDRAIL: Catch stale ignores
ignore_missing_imports = true
show_error_codes = true
disallow_any_unimported = false   # Don't block on missing stubs
# Baseline: don't fail on existing errors (frozen debt)
# New errors in Zone A will be caught by per-module overrides
# HARD RULES:
#   - No new `# type: ignore[union-attr]`
#   - No blanket `ignore_errors = True`
#   - Zone A blocks on ANY new error

# =============================================================================
# ZONE A: CRITICAL (--strict equivalent)
# Correctness-critical paths where type bugs hide
# Pre-commit BLOCKS on new errors in these modules
# =============================================================================

[[tool.mypy.overrides]]
module = [
    "app.policy.ir.*",
    "app.policy.ast.*",
    "app.policy.runtime.deterministic_engine",
    "app.workflow.engine",
    "app.workflow.canonicalize",
    "app.services.certificate",
    "app.services.evidence_report",
    "app.traces.pg_store",
    "app.utils.deterministic",
    "app.utils.canonical_json",
]
# Strict settings for critical paths
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = false      # Too aggressive for now
disallow_incomplete_defs = false   # Too aggressive for now
check_untyped_defs = true          # Check function bodies
strict_optional = true             # Enforce None checks
warn_redundant_casts = true
no_implicit_reexport = true

# =============================================================================
# ZONE B: STANDARD (moderate checking)
# Business logic - warn on issues, don't block
# =============================================================================

[[tool.mypy.overrides]]
module = [
    "app.hoc.api.*",
    "app.skills.*",
    "app.agents.sba.*",
    "app.services.replay_determinism",
    "app.planner.*",
    "app.planners.*",
    "app.integrations.*",
    "app.memory.*",
    "app.storage.*",
    "app.auth.*",
]
warn_return_any = true
strict_optional = true
check_untyped_defs = false         # Don't check untyped function bodies

# =============================================================================
# ZONE C: FLEXIBLE (baseline freeze only)
# Infrastructure glue, metrics, utilities - known debt tolerated
# =============================================================================

[[tool.mypy.overrides]]
module = [
    "app.workflow.metrics",
    "app.traces.traces_metrics",
    "app.utils.metrics_helpers",
    "app.config.*",
    "app.logging_config",
    "app.worker.*",
    "app.workers.*",
    "app.cli",
    "app.schemas.*",
]
# Relaxed settings - just maintain baseline
warn_return_any = false
strict_optional = false
check_untyped_defs = false
disable_error_code = ["misc", "assignment"]  # Known Prometheus stub issues

# =============================================================================
# EXTERNAL/GENERATED - Ignore completely
# =============================================================================

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "tests.*",
]
ignore_errors = true
